NEXT-PRISMA2-DOCKER-BLOG: Add Prisma 2 backend

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ pids
 *.pid
 *.seed
 build/Release
+**/.next
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
