--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
+    "apollo-boost": "^0.4.3",
+    "graphql": "^14.4.2",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "^9.0.3",
     "react": "^16.8.6",
+    "react-apollo": "^2.5.8",
     "react-dom": "^16.8.6"
   }
 }
