--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
+    "antd": "^3.20.7",
     "apollo-boost": "^0.4.3",
     "graphql": "^14.4.2",
     "isomorphic-unfetch": "^3.0.0",
